Code review
Signed-off-by: Alexander Schwartz <alexander.schwartz@ibm.com>